@@ -8,7 +8,9 @@ Mejorado ZX Vision:
 - Agregada opción para añadir un contorno a los iconos
 
 Mejorado edición de joystick a eventos/teclas (permitir desasignar fácilmente)
-Mejorado debug cpu: mostrar cuando los valores de registros se han modificado por la última execución de instrucción
+Mejorado debug cpu:
+- Mostrar cuando los valores de registros se han modificado por la última execución de instrucción
+- Vistas 5 y 6 usan un memptr diferente ("memptx")
 
 Agregado carga con --tape y --realtape con autocarga de snapshot al inicio
 Corregido descomprimir archivos tar y rar con espacios en el nombre
