@@ -37,6 +37,11 @@ ok-al mover raton arriba no aparecera overlay, porque necesita multitask y backg
 -en debug cpu, para evaluar expresion hay que ir a breakpoints. poco intuitivo. deberia tener una tecla directa desde debug cpu
 
 -agregar a ayuda de debug cpu lo de mostrar valores de registros modificados: que lo muestra en color inverso, etc etc
+-agregar a ayuda de debug cpu memptx de vistas 5 y 6
+
+-mostrar diferencias de memoria en vistas 5 y 6 de ejecución anterior y actual
+Como hacerlo? Guardamos bloque de memoria (sin llamar a peek_byte_no_time para no alterar condiciones MRA) o comparamos
+las strings de pantalla tal cual?
 
 ok? -cuando se dispara un breakpoint que abre el menu, llamar a menu_debug_value_registers_modified_copy() para que se reseteen cambios anteriores
 Con ruN pasa lo mismo también
