@@ -8,7 +8,9 @@ Improved ZX Vision:
 - Added setting to add a stroke on icons
 
 Improved editing joystick to events/keys (allow to unasign easily)
-Improved debug cpu: show when registers values are modified by last opcode execution
+Improved debug cpu:
+- Show when registers values are modified by last opcode execution
+- Views 5 and 6 use a different memptr ("memptx")
 
 Fixed loading tape with --tape and --realtape and autoload snapshot on start
 Fixed uncompress tar and rar files with spaces in name
